[gd_scene load_steps=8 format=3 uid="uid://3t68klkrfmgb"]

[ext_resource type="PackedScene" uid="uid://snxhmwdvvp15" path="res://Scenes/Turret/projectile.tscn" id="1_2todk"]
[ext_resource type="Script" path="res://Scenes/Turret/turret.gd" id="1_equwq"]
[ext_resource type="PackedScene" uid="uid://28fxkqvn3k8n" path="res://Assets/Cannon.glb" id="3_h844k"]
[ext_resource type="PackedScene" uid="uid://cee3pbjmwon81" path="res://Assets/TurretBase.glb" id="4_rny6x"]

[sub_resource type="Animation" id="Animation_hb7fc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase/TurretTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.5, 0)]
}

[sub_resource type="Animation" id="Animation_5bsem"]
resource_name = "Shooting"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase/TurretTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.5, -0.6), Vector3(0, 0.5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c66gm"]
_data = {
"RESET": SubResource("Animation_hb7fc"),
"Shooting": SubResource("Animation_5bsem")
}

[node name="Turret" type="Node3D"]
script = ExtResource("1_equwq")
projectile = ExtResource("1_2todk")

[node name="TurretBase" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="TurretTop" type="Node3D" parent="TurretBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Cannon" parent="TurretBase/TurretTop" instance=ExtResource("3_h844k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="Reload" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c66gm")
}

[node name="TurretBase2" parent="." instance=ExtResource("4_rny6x")]

[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
